bpo-29655: Fixed possible reference leaks in `import *`. (#301)

Patch by Matthias Bussonnier.